# Saka-Note

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN_COMPASS.md  LICENSE  README.md  REBRAND.md  build_otso.bat  learning-wiki-Solum.md  learning-wiki-saka-note.md  pack_otso.bat
.github/workflows/: build.yml
.tmp-skill-audit-20260410/isolated-home/.agents/: .skill-lock.json
docs/: SQUIRCLE_IMPLEMENTATION_PHASE3_STATUS.txt  language-standard.md  roadmap.md  upstream-and-modifications.md
docs/android/: motion-comparative-audit-2026-04.md
docs/testing/: claim-test-protocol.md
src/: main.cpp  notepad.manifest  notepad.rc  resource.h
src/core/: crash_diagnostics.cpp  crash_diagnostics.h  file_dialog_filters.cpp  file_dialog_filters.h  globals.cpp  globals.h  list_continuation.cpp  list_continuation.h  session_io.cpp  session_io.h  spring_solver.h  text_codec.cpp  text_codec.h  types.h  versioning.cpp  versioning.h
src/lang/: en.h  ja.h  lang.cpp  lang.h
src/modules/: animation_controller.h  background.cpp  background.h  command_palette.cpp  command_palette.h  command_routing.cpp  command_routing.h  commands.cpp  commands.h  custom_scrollbar.cpp  custom_scrollbar.h  design_system.h  dialog.cpp  dialog.h  editor.cpp  editor.h  file.cpp  file.h  graphics_engine.cpp  graphics_engine.h  icon_actions.cpp  menu.cpp  perf_benchmark.cpp  premium_header.cpp  premium_header.h  premium_orchestrator.cpp  premium_orchestrator.h  session_policy.h  settings.cpp  settings.h  squircle.h  tab_document.h  tab_layout.cpp  tab_layout.h  tab_model_ops.cpp  tab_model_ops.h  tab_session_io.cpp  tab_session_io.h  tab_spin_chrome.cpp  tab_spin_chrome.h  (+5 more)
tests/: encoding_tests.cpp  list_continuation_tests.cpp  session_io_tests.cpp  tab_model_ops_tests.cpp  tab_session_io_tests.cpp  versioning_tests.cpp
tools/: benchmark-gate.ps1  compare-notepad.ps1  dev-build.ps1
